# Telegram-Botkijuhg7hi

./: .env.example  .gitignore  .replit  bot_session.session  bot_session.session-journal  pyproject.toml  replit.md  requirements.txt  setup.sh  telegram-bot.service  telegram_bot_simple.py
attached_assets/: Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777817769364.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777817805322.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777817830617.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777817962217.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777818012855.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777818052775.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777818418531.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777818590107.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876315877.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876346289.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876696813.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876724497.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876761918.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876803257.txt  Pasted-Welcome-to-Ubuntu-22-04-5-LTS-GNU-Linux-5-15-0-176-gene_1777876945753.txt  (+2 more)
