[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bakong-khqr>=0.4.12",
    "pillow>=11.3.0",
    "python-telegram-bot>=22.3",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "telegram>=0.0.1",
    "urllib3>=2.5.0",
]
